--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,6 +73,8 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
+    bundleCommand: "ram-bundle",
+    extraPackagerArgs: ["--indexed-ram-bundle"],
     entryFile: "index.js"
 ]
 
